# wms2

./: .env.example  .gitignore  CLAUDE.md  CURRENT_OBJECTIVES.md  Dockerfile  IMPLEMENTATION_LOG.md  PLANNING.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  install.sh  pyproject.toml
.claude/: environment.md  settings.json
condor/: config
docs/: adaptive.md  error_handling.md  processing.md  spec.md  test-workflows.md  testing.md
scripts/: check-env.sh  e2e_real_cached.py  e2e_real_condor.py  e2e_reduced_test.py  fetch-workflow-info.py  plot_architecture.py  plot_rounds.py  plot_work_units.py  run_real_local.py  setup-dev-vm.sh  start-service.sh  test_stepchain_local.py
src/wms2/: __main__.py  cli.py  config.py  main.py
tests/: conftest.py
tests/environment/: checks.py  conftest.py  test_level0.py  test_level1.py  test_level2.py  test_level3.py
tests/integration/: conftest.py  test_adaptive_rounds.py  test_api.py  test_condor_submit.py  test_dag_planner.py  test_processing_blocks.py  test_production_pipeline.py  test_repository.py  test_resource_utilization.py
tests/matrix/: __init__.py  __main__.py  adaptive.py  catalog.py  definitions.py  derive.py  environment.py  faults.py  reporter.py  runner.py  sets.py  sweeper.py
tests/unit/: conftest.py  test_admission.py  test_api_workflows.py  test_condor_adapter.py  test_cric_adapter.py  test_dag_generator.py  test_dag_monitor.py  test_dag_planner.py  test_enums.py  test_error_handler.py  test_lifecycle.py  test_merge_groups.py  test_models.py  test_output_lfn.py  test_pilot_runner.py  (+9 more)
(+70 files in other folders)
